; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_mem.c_get_unmapped_area_mem.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_mem.c_get_unmapped_area_mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }

@EINVAL = common dso_local global i64 0, align 8
@PAGE_SHIFT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.file*, i64, i64, i64, i64)* @get_unmapped_area_mem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_unmapped_area_mem(%struct.file* %0, i64 %1, i64 %2, i64 %3, i64 %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca %struct.file*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store %struct.file* %0, %struct.file** %7, align 8
  store i64 %1, i64* %8, align 8
  store i64 %2, i64* %9, align 8
  store i64 %3, i64* %10, align 8
  store i64 %4, i64* %11, align 8
  %12 = load i64, i64* %10, align 8
  %13 = load i64, i64* %9, align 8
  %14 = call i32 @valid_mmap_phys_addr_range(i64 %12, i64 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %5
  %17 = load i64, i64* @EINVAL, align 8
  %18 = sub nsw i64 0, %17
  store i64 %18, i64* %6, align 8
  br label %23

19:                                               ; preds = %5
  %20 = load i64, i64* %10, align 8
  %21 = load i64, i64* @PAGE_SHIFT, align 8
  %22 = shl i64 %20, %21
  store i64 %22, i64* %6, align 8
  br label %23

23:                                               ; preds = %19, %16
  %24 = load i64, i64* %6, align 8
  ret i64 %24
}

declare dso_local i32 @valid_mmap_phys_addr_range(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
